devel
-----

* FE-301: Unify Users View on web UI.

* Updated ArangoDB Starter to 0.16.0.

* Fixed issue with lock starvation when an AQL insert operation with multiple
  static documents was executed as part of a streaming transaction.

* Optimize runtime performance of exclusive locks.

* Added deprecation message for parts of createCollection API. So far
  this API ignored unknown options, and therefore did not warn about
  typos. Furthermore some combinations of values that are not sensible
  are accepted. In some future version of ArangoDB those will be rejected
  by the API. The documented part of the API does not change. Watch out
  for an error with logid: ee638, this indicates you call deprecated parts.

* Avoid recursive lock during agency startup.

* Remove TTL and Observe/Unobserve from the Agency API.

* FE-290: Unify Graphs View on web UI.

* Added the following metrics for the in-memory edge cache:

  - `rocksdb_cache_edge_inserts_total`: total number of insertions into the
    in-memory edge cache.
  - `rocksdb_cache_edge_compressed_inserts_total`: total number of insertions
    into the in-memory edge cache that used compression.

* Added the startup option `--cache.max-spare-memory-usage` to control memory
  usage for spare, unused hash tables in the in-memory caching subsystem. This
  option can be used to cap the memory used by spare tables. It can be set to
  a value of 0 to not use any memory except for active hash tables.

* Updated ArangoDB Starter to 0.16.0-preview-3 and arangosync to v2.19.0-preview-1.

* FE-289: Improve database table UI.

* Added startup option `--database.max-databases` to limit the maximum number
  of databases that can exist in parallel on a deployment. This option can be
  used to limit resources used by database objects. If the option is used and
  there already exist as many databases as configured by this option, any
  attempt to create an additional database will fail with error 32